--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,83 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+$bgColor: #498bf9;
+$textHoverColor: white;
+$debug: false;
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+}
+
+.button {
+	display: inline-block;
+	position: relative;
+	z-index: 1;
+	overflow: if($debug, unset, hidden);
+	
+	text-decoration: none;
+	
+	font-family: "Inter",sans-serif;
+	font-weight: 600;
+	font-size: 2em;
+	
+	padding: 0.75em 1em;
+	
+	color: #498bf9;
+	
+	border: 0.15em solid #498bf9;
+	border-radius: calc(0.75em + 0.5em + 0.15em);
+	
+	transition: 4s;
+	
+	&:before,
+	&:after {
+		content: '';
+		position: absolute;
+		top: -1.5em;
+		
+		z-index: -1;
+		
+		width: 200%;
+		aspect-ratio: 1;
+		
+		border: if($debug, inherit, none);
+		border-radius: 40%;
+		
+		background-color: rgba($bgColor, 0.25);
+		
+		transition: 4s;
+	}
+	
+	&:before {
+		left: -80%;
+		transform: translate3d(0, 5em, 0) rotate(-340deg);
+	}
+	
+	&:after {
+		right: -80%;
+		transform: translate3d(0, 5em, 0) rotate(390deg);
+	}
+	
+	&:hover,
+	&:focus {
+		color: $textHoverColor;
+		
+		&:before,
+		&:after {
+			transform: none;
+			background-color: rgba($bgColor, 0.75);
+		}
+	}
+}
+
+
+
+
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
